[package]
name = "ledsim"
version = "0.1.0"
authors = ["Niklaus Zbinden <niklauszbinden@gmail.com>"]
edition = "2021"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
env_logger = "0.10"
error-iter = "0.4"
log = "0.4"
pixels = "0.14.0"
winit = "0.28"
winit_input_helper = "0.14"